assets/css/style.scss
---
---

@import "{{ site.theme }}";

body {
  color: #4A4A4A;
}

#container {
  background: #fff;
}

h1 {
  color: #6d6d6d;
  margin-bottom: 1rem;
}

h2, h3 {
  color: #303030d4;
  margin-top: 1rem;
}

header h1, a {
  color: #C63527;
}

a {
  text-decoration: underline;
}

a:hover {
  color: #91281d;
}

ul.quicklinks {
  padding-left: 2rem;
}

ul.quicklinks li {
  padding-left: 0rem;
}

header h2 {
  color: #6d6d6d;
}

ol {
  margin-left: 2rem;
  margin-top: 1rem;
}

ol li {
  margin-bottom: 0.5rem;
}

footer {
  color: #333;
}

a[name] {
  color: #6d6d6d;
  text-decoration: none;
}

img {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

div.highlight {
  margin-top: 1rem;
}

div.flex-container {
  display: flex;
  justify-content: space-between;
}

div.flex-box {
  margin-top: auto;
}

span.image-request {
  display: block;
  text-align: center;
}

span.red-text {
  color: #C63527;
}

img.centre-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

img.size-example {
  display: block;
  margin: 5px auto 5px auto;
}

img.region-example {
  display: block;
  margin: 5px auto 20px auto;
}

.size-figure figcaption {
  text-align: center;
  margin-top: 8px;
  margin-bottom: 20px;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

.inner {
  width: 750px;
  margin: auto auto;
  padding: 1rem;
}

.mirador-iframe {
  width: 100%;
  min-height: 400px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.mirador-example-links {
  margin-bottom: 10px;
}

/* Navbar CSS adapted from
https://dev.to/supanthapaul/create-a-simple-navbar-with-7-lines-of-css-4h7f
 */

nav {
  display: flex;
  justify-content: space-between;
}

nav ul {
  display: flex;
  list-style: none;
}

nav ul li {
  list-style: none;
  padding-left: 1rem;
}

nav ul li a {
  font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial;
  font-size: 18px;
  text-decoration: none;
}

nav ul li a:hover {
  text-decoration: underline;
}

/*
  Extra small devices (phones, 600px and down)
*/
@media only screen and (max-width: 600px) {
  nav {
    flex-direction: column;
  }
  nav ul {
    flex-direction: column;
    padding-top: 0.5rem;
  }
  nav li {
    padding: 0.5rem 0;
  }
}

